--- a/trunk/template/wwwroot/dynamic_fixed.html
+++ b/trunk/template/wwwroot/dynamic_fixed.html
@@ -4,6 +4,7 @@
 		<title>Template</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<script type="text/javascript" src="assets/scripts/swfobject.js"></script>
+		<script type="text/javascript" src="assets/scripts/swfaddress.js"></script>
 		<script type="text/javascript">
 		swfobject.embedSWF("assets/swfs/shell.swf", "content", "800", "500", "9.0.0", "assets/swfs/expressInstall.swf");
 		</script>
