--- a/trunk/template/wwwroot/dynamic_full.html
+++ b/trunk/template/wwwroot/dynamic_full.html
@@ -9,6 +9,7 @@
 			#altContent				{ /* style alt content */ }
 		</style>
 		<script type="text/javascript" src="assets/scripts/swfobject.js"></script>
+		<script type="text/javascript" src="assets/scripts/swfaddress.js"></script>
 		<script type="text/javascript">
 			var flashvars = {};
 			var params = {};
@@ -18,7 +19,7 @@
 			params.allowfullscreen = "true";
 			var attributes = {};
 			attributes.id = "flash_content";
-			swfobject.embedSWF("assets/swfs/splash.swf", "content", "100%", "100%", "9.0.0", "assets/swfs/expressInstall.swf", flashvars, params, attributes);
+			swfobject.embedSWF("assets/swfs/shell.swf", "content", "100%", "100%", "9.0.0", "assets/swfs/expressInstall.swf", flashvars, params, attributes);
 		</script>
 	</head>
 	<body>
