--- a/trunk/template/wwwroot/static_full.html
+++ b/trunk/template/wwwroot/static_full.html
@@ -9,6 +9,7 @@
 			#altContent				{ /* style alt content */ }
 		</style>
 		<script type="text/javascript" src="assets/scripts/swfobject.js"></script>
+		<script type="text/javascript" src="assets/scripts/swfaddress.js"></script>
 		<script type="text/javascript">
 			swfobject.registerObject("flash_content", "9.0.0", "assets/swfs/expressInstall.swf");
 		</script>
@@ -16,14 +17,14 @@
 	<body>
 		<div id="content">
 			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="flash_content">
-				<param name="movie" value="assets/swfs/splash.swf" />
+				<param name="movie" value="assets/swfs/shell.swf" />
 				<param name="menu" value="false" />
 				<param name="quality" value="high" />
 				<param name="scale" value="noscale" />
 				<param name="salign" value="tl" />
 				<param name="allowfullscreen" value="true" />
 				<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="assets/swfs/splash.swf" width="100%" height="100%">
+				<object type="application/x-shockwave-flash" data="assets/swfs/shell.swf" width="100%" height="100%">
 					<param name="menu" value="false" />
 					<param name="quality" value="high" />
 					<param name="scale" value="noscale" />
