--- a/trunk/as3/template/wwwroot/assets/css/style.css
+++ b/trunk/as3/template/wwwroot/assets/css/style.css
@@ -1,18 +1,16 @@
-.blue {
-	font-size: 14pt;
-	font-style: italic;
-	line-height: 5px;
-	text-transform: uppercase;
-	color: #3300FF;
+html {
+	height: 100%;
+	overflow: hidden;
 }
-.puppies {
-	font-size: 24pt;
-	color: #633A34;
-	letter-spacing: 15px;
+				
+#content {
+	width: 100%;
+	height: 100%;
 }
-.bangbang {
-	font-size: 9pt;
-	color: #FF0000;
-	letter-spacing: 5px;
-	font-weight:bold;	
+
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	background: #0000000;
 }
