--- a/trunk/as3/template/wwwroot/index_full.html
+++ b/trunk/as3/template/wwwroot/index_full.html
@@ -5,7 +5,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <script type="text/javascript" src="assets/scripts/swfobject.js"></script>
         <script type="text/javascript" src="assets/scripts/swfaddress.js"></script>
-<link rel="Stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="Stylesheet" type="text/css" href="assets/css/site_style.css">
         </style>
     </head>
     <body>
@@ -17,6 +17,7 @@
             var so = new SWFObject('assets/swfs/shell.swf', 'website', '100%', '100%', '9', '#000000');
             so.useExpressInstall('assets/swfs/expressinstall.swf');
             so.addParam('menu', 'false');
+	 so.addParam('scale', 'noscale');
 	//so.addParam('base', 'assets/swfs/');            
             so.write('content');
         // ]]>
