--- a/trunk/as3/template/wwwroot/index_full.html
+++ b/trunk/as3/template/wwwroot/index_full.html
@@ -18,7 +18,7 @@
             so.useExpressInstall('assets/swfs/expressinstall.swf');
             so.addParam('menu', 'false');
 	 so.addParam('scale', 'noscale');
-	//so.addParam('base', 'assets/swfs/');            
+	so.addParam('base', 'assets/swfs/');            
             so.write('content');
         // ]]>
         </script>
