--- a/trunk/as3/template/wwwroot/index_fixed.html
+++ b/trunk/as3/template/wwwroot/index_fixed.html
@@ -14,12 +14,12 @@
         </div>
         <script type="text/javascript">
         // <![CDATA[
-            var so = new SWFObject('assets/swfs/shell.swf', 'website', '800', '500', '9', '#000000');
-            so.useExpressInstall('assets/swfs/expressinstall.swf');
-            so.addParam('menu', 'false');
-	 so.addParam('scale', 'noscale');
-	so.addParam('base', 'assets/swfs/');            
-            so.write('content');
+            var so = new SWFObject("assets/swfs/shell.swf?t=" +new Date().getTime(), "website", "800", "500", "9", "#000000");
+            so.useExpressInstall("assets/swfs/expressinstall.swf");
+            so.addParam("menu", "false");
+	 so.addParam("scale", "noscale");
+	so.addParam("base", "assets/swfs/");            
+            so.write("content");
         // ]]>
         </script>
     </body>
