--- a/trunk/as3/templates/barebones/wwwroot/index_full.html
+++ b/trunk/as3/templates/barebones/wwwroot/index_full.html
@@ -9,17 +9,17 @@
         </style>
     </head>
     <body>
-        <div id="content">
+        <div id="content" align="center">
             <p>In order to view this page you need JavaScript and Flash Player 9+ support!</p>
         </div>
         <script type="text/javascript">
         // <![CDATA[
-            var so = new SWFObject("assets/swfs/shell.swf?t=" +new Date().getTime()", "website", "100%", "100%", "9", "#000000");
-            so.useExpressInstall("assets/swfs/expressinstall.swf");
-            so.addParam("menu", "false");
-	 so.addParam("scale", "noscale");
-	so.addParam("base", "assets/swfs/");            
-            so.write("content");
+			var so = new SWFObject("assets/swfs/shell.swf?t=" +new Date().getTime(), "website", "100%", "100%", "9", "#000000");
+			so.useExpressInstall("assets/swfs/expressinstall.swf");
+			so.addParam("menu", "false");
+			so.addParam("scale", "noscale");
+			so.addParam("base", "assets/swfs/");            
+			so.write("content");
         // ]]>
         </script>
     </body>
