--- a/trunk/as3/templates/barebones/wwwroot/assets/css/html_style.css
+++ b/trunk/as3/templates/barebones/wwwroot/assets/css/html_style.css
@@ -1,16 +1,18 @@
 html {
+	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
-				
+
 #content {
 	width: 100%;
 	height: 100%;
 }
 
 body {
+	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	background: #0000000;
+	background: #000000;
 }
