--- a/trunk/as3/templates/guide/wwwroot/index_fixed.html
+++ b/trunk/as3/templates/guide/wwwroot/index_fixed.html
@@ -5,8 +5,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <script type="text/javascript" src="assets/scripts/swfobject.js"></script>
         <script type="text/javascript" src="assets/scripts/swfaddress.js"></script>
-<link rel="Stylesheet" type="text/css" href="assets/css/site_style.css">
-        </style>
+        <link rel="stylesheet" type="text/css" href="assets/css/html_style.css">
     </head>
     <body>
         <div id="content" align="center">
