--- a/trunk/as3/templates/guide/wwwroot/index_full.html
+++ b/trunk/as3/templates/guide/wwwroot/index_full.html
@@ -13,7 +13,7 @@
         </div>
         <script type="text/javascript">
         // <![CDATA[
-			var so = new SWFObject("assets/swfs/shell.swf?t=" +new Date().getTime(), "website", "100%", "100%", "9", "#000000");
+			var so = new SWFObject("assets/swfs/shell.swf?t=" + new Date().getTime(), "flash_content", "100%", "100%", "9", "#000000");
 			so.useExpressInstall("assets/swfs/expressinstall.swf");
 			so.addParam("menu", "false");
 			so.addParam("scale", "noscale");
