--- a/trunk/as3/templates/expert/wwwroot/index_fixed.html
+++ b/trunk/as3/templates/expert/wwwroot/index_fixed.html
@@ -17,7 +17,8 @@
 			so.useExpressInstall("assets/swfs/expressinstall.swf");
 			so.addParam("menu", "false");
 			so.addParam("scale", "noscale");
-			so.addParam("base", "assets/swfs/");            
+			so.addParam("base", "assets/swfs/");
+			so.addParam("wmode", "transparent");      
 			so.write("content");
         // ]]>
         </script>
