--- a/trunk/as3/templates/beginner/wwwroot/index_fixed.html
+++ b/trunk/as3/templates/beginner/wwwroot/index_fixed.html
@@ -13,12 +13,13 @@
         </div>
         <script type="text/javascript">
         // <![CDATA[
-			var objSWF = new SWFObject("assets/swfs/shell.swf?t=" +new Date().getTime(), "shell", "800", "500", "9", "#000000");
+			var objSWF = new SWFObject("assets/swfs/shell.swf?t=" + new Date().getTime(), "shell", "800", "500", "9", "#000000");
 			objSWF.useExpressInstall("assets/swfs/expressinstall.swf");
 			objSWF.addParam("menu", "false");
 			objSWF.addParam("scale", "noscale");
 			objSWF.addParam("base", "assets/swfs/");
 			objSWF.addParam("allowScriptAccess", "always");    
+			objSWF.addParam("wmode", "transparent");    
 			objSWF.write("content");
         // ]]>
         </script>
