--- a/trunk/as3/templates/expert/wwwroot/index.html
+++ b/trunk/as3/templates/expert/wwwroot/index.html
@@ -4,24 +4,27 @@
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-       
+        
         <script type="text/javascript" src="assets/scripts/swfobject.js"></script>
         <script type="text/javascript" src="assets/scripts/bedrock_deeplinking.js"></script>
         <script type="text/javascript">
         /*<![CDATA[*/
-            swfobject.embedSWF('assets/swfs/shell.swf', 'website', '800', '500', '10', 
-                'assets/swfs/expressinstall.swf', {}, { base:'assets/swfs/' bgcolor: '#CCCCCC', menu: 'false'}, {id: 'website'});
+            swfobject.embedSWF('assets/swfs/shell.swf', 'website', '800', '500', '10', 'assets/swfs/expressinstall.swf', {}, { base:'assets/swfs', bgcolor: '#CCCCCC', menu: 'false'}, {id: 'website'});
         /*]]>*/
         </script>
+        <link rel="stylesheet" type="text/css" href="assets/css/html_style.css">
+        
     </head>
-    <body>
-        <div id="website">
-            <p>In order to view this page you need Flash Player 10+ support!</p>
-            <p>
-                <a href="http://www.adobe.com/go/getflashplayer">
-                    <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
-                </a>
-            </p>
+    <body >
+    	<div align="center">
+            <div id="website">
+                <p>In order to view this page you need Flash Player 10+ support!</p>
+                <p>
+                    <a href="http://www.adobe.com/go/getflashplayer">
+                        <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
+                    </a>
+                </p>
+            </div>
         </div>
     </body>
 </html>
