--- a/trunk/as3/templates/beginner/wwwroot/index_full.html
+++ b/trunk/as3/templates/beginner/wwwroot/index_full.html
@@ -3,23 +3,32 @@
     <head>
         <title></title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <script type="text/javascript" src="assets/scripts/swfobject.js"></script>
-        <script type="text/javascript" src="assets/scripts/swfaddress.js"></script>
-        <link rel="stylesheet" type="text/css" href="assets/css/html_style.css">
+        <link rel="stylesheet" href="assets/stylesheet/html_style.css" type="text/css" />
+        <script src="assets/scripts/swfobject.js" type="text/javascript" ></script>
+        <script src="assets/scripts/swfaddress.js" type="text/javascript" ></script>
+        
+        <script type="text/javascript">
+        	var swfsPath = "assets/swfs/";
+        	var d = new Date();
+        	
+        	var flashvars = {};
+			var params = {};
+			var params = {};
+			params.menu = "false";
+			params.scale = "noscale";
+			params.allowscriptaccess = "always";
+			params.base = swfsPath;
+			var attributes = {};
+			attributes.id = "shell";
+			swfobject.embedSWF(swfsPath+"shell.swf", "content", "100%", "100%", "9.0.0", swfsPath+"expressInstall.swf", flashvars, params, attributes);
+			//swfobject.embedSWF(swfsPath+"shell.swf?t="+d.getTime(), "content", "100%", "100%", "9.0.0", swfsPath+"expressInstall.swf", flashvars, params, attributes);
+		</script>
+		
     </head>
     <body>
         <div id="content" align="center">
             <p>In order to view this page you need JavaScript and Flash Player 9+ support!</p>
         </div>
-        <script type="text/javascript">
-        // <![CDATA[
-			var so = new SWFObject("assets/swfs/shell.swf?t=" +new Date().getTime(), "flash_content", "100%", "100%", "9", "#000000");
-			so.useExpressInstall("assets/swfs/expressinstall.swf");
-			so.addParam("menu", "false");
-			so.addParam("scale", "noscale");
-			so.addParam("base", "assets/swfs/");            
-			so.write("content");
-        // ]]>
-        </script>
+        
     </body>
 </html>
